<resources>
    <string name="app_name">StudentListView</string>
    <string name="fullname">* Fullname</string>
    <string name="adress">*Adress</string>
    <string name="age">*Age</string>
    <string name="save_button">Save</string>
    <string name="list_student">Danh sách sinh viên</string>
    <string name="create">create</string>
    <string name="delete_title">"Xóa thông tin!"</string>
    <string name="delete_message">Bạn có chắc chắn muốn xóa?</string>

</resources>
