<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kimvan.hung.studentlistview.DetailsActivity">

    <TextView
        android:id="@+id/name_detail_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:text="@string/app_name"
        android:gravity="center"
        android:layout_marginTop="15dp"/>

    <LinearLayout
        android:id="@+id/layout_fullname"
        android:layout_below="@+id/name_detail_title"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/fullname"
            android:layout_width="80dp"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/fullname"/>
        <EditText
            android:id="@+id/fullname_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:background="@android:color/transparent"
            android:inputType=""
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_age"
        android:layout_below="@+id/layout_fullname"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/age"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/age"/>
        <EditText
            android:id="@+id/age_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:background="@android:color/transparent"
            android:inputType=""
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_adress"
        android:layout_below="@+id/layout_age"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/adress"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/adress"/>
        <EditText
            android:id="@+id/adress_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:background="@android:color/transparent"
            android:inputType=""
            tools:ignore="LabelFor" />
    </LinearLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp"
        android:text="@string/save_button" />

</RelativeLayout>
