<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kimvan.hung.studentlistview.InputMainActivity">

    <TextView
        android:id="@+id/title_input"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:textSize="20sp"
        android:gravity="center"
        android:text="Nhập thông tin sinh viên"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"/>
    <LinearLayout
        android:id="@+id/layout_input"
        android:orientation="vertical"
        android:layout_below="@+id/title_input"
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/title_input_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fullname"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_input_name"
                android:textSize="18sp"
                android:background="@android:color/transparent"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/title_input_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/age"/>
            <EditText
                android:id="@+id/input_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_input_age"
                android:background="@android:color/transparent"
                android:textSize="18sp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/title_input_adress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/adress"/>
            <EditText
                android:id="@+id/input_adress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_input_adress"
                android:background="@android:color/transparent"
                android:textSize="18sp"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_button"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="send"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/show_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="show"/>
    </LinearLayout>
</RelativeLayout>
